[package]
name = "sphere_ui_components"
version = "0.1.0"
edition = "2021"
autobins = false
license.workspace = true

[lib]
name = "sphere_ui_components"
path = "src/lib.rs"

[features]
default = ["gpu-renderer", "native-dialogs"]
gpu-renderer = ["dep:pollster", "dep:raw-window-handle", "dep:wgpu"]
native-dialogs = ["dep:rfd"]
plugin-host-bin = ["sphere-plugin-host/plugin-host-bin"]
# Real MDX-NET stem separation via ONNX Runtime (CPU; loads onnxruntime at
# runtime via ORT_DYLIB_PATH). GPU EPs are opt-in below.
stem-onnx = ["sphere-audio-processor/stem-onnx"]
stem-cuda = ["sphere-audio-processor/stem-cuda"]
stem-directml = ["sphere-audio-processor/stem-directml"]
stem-coreml = ["sphere-audio-processor/stem-coreml"]
# CEF-hosted editors for built-in plugins. Requires the CEF SDK in `build/cef`;
# without this feature the built-in editor route reports "host unavailable"
# instead of opening a window.
builtin-plugin-editor = [
    "dep:sphere-webview",
    "dep:rodharerist",
    "dep:builtin-ui-embed",
]

[dependencies]
# NOTE: `default-features = false` opts out of gpui's `windows-manifest` feature.
# The native `futureboard_native` binary embeds its own RT_MANIFEST via
# `apps/shared/app.rc`; leaving gpui's manifest enabled triggers CVT1100
# "duplicate resource" / LNK1123 at link time on Windows due to Cargo feature
# unification. Other default features (font-kit, wayland, x11) are re-enabled
# so non-Windows targets keep working unchanged.
gpui.workspace = true
# Audio decoding + multi-LOD peak generation moved into DAUx
# (SphereDirectAudioEngine) per PART 5 — the UI no longer carries its
# own hound / symphonia decoder. Same engine, same LOD ladder, same
# format coverage as the realtime path.
# IMPORTANT: UI components are used by the standalone `futureboard_native` app.
# Disable Node/N-API surfaces so native builds don't try to link against `napi_*`.
sphere_directaudioengine.workspace = true
sphere-audio-processor.workspace = true
sphere-audio-editor.workspace = true
sphere-plugin-host.workspace = true
# Built-in plugin editor hosting (feature `builtin-plugin-editor`).
# `rodharerist` is needed for its embedded editor asset table.
sphere-webview = { workspace = true, optional = true, features = ["cef-runtime"] }
rodharerist = { workspace = true, optional = true }
builtin-ui-embed = { workspace = true, optional = true }
# Reusable native graphics/text/window backend (DirectWrite, DWM, GDI paint).
sphere-graphic-engine.workspace = true
sphere-midi-service.workspace = true
sphere-soundfont-player.workspace = true
# Cross-platform user directories for the file browser default location.
dirs.workspace = true
# Menu manifest is shared with Electron/Web via a generated JSON file.
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
base64.workspace = true
pollster = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
# Native file dialogs (open/save/folder picker).
rfd = { workspace = true, optional = true }
# CRC-32/ISO-HDLC checksum for .fbproj binary format.
crc32fast.workspace = true
sphere-encoder.workspace = true
# Grapheme-cluster + word segmentation for the shared IME-safe text input core
# (cursor movement / deletion must not split emoji, Thai marks, or combining
# sequences). Already used transitively by gpui's text system.
unicode-segmentation.workspace = true

# Win32 for the main-app-owned plugin **content child HWND** (host-process
# editor ownership). Same workspace version the app already links transitively.
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
windows-core = { workspace = true }

# Real MIDI port enumeration (WinMM on Windows, ALSA on Linux) for the device
# registry that replaces the Preferences mock lists. Scoped to non-macOS because
# midir's macOS backend (coremidi) pulls core-foundation 0.10.1, which conflicts
# with gpui's pinned core-foundation =0.10.0. macOS falls back to an empty scan
# until that pin is reconciled.
[target.'cfg(not(target_os = "macos"))'.dependencies]
midir.workspace = true
