[package]
name = "futureboard-core"
version = "0.1.0"
edition = "2024"
description = "Futureboard Studio DSP Core — WebAudioCore Framework"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable browser console panic hook for readable Rust stack traces in DevTools.
# Activate with: wasm-pack build --features console_panic
console_panic = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = "debuginfo"
