[package]
name = "futureboard-core"
version = "0.1.0"
edition = "2024"
description = "Futureboard Studio DSP Core — WebAudioCore Framework"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable browser console panic hook for readable Rust stack traces in DevTools.
# Activate with: wasm-pack build --features console_panic
console_panic = ["console_error_panic_hook"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
