[package]
name = "futureboard-extension-template-react"
version = "0.1.0"
edition = "2021"
description = "Futureboard Studio extension template with audio plugin backend"

[lib]
name = "futureboard_extension_template_react"
path = "src/backend/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
