[package]
name = "apakinstaller"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
clap.workspace = true
gpui.workspace = true
sphere_ui_components = { workspace = true, default-features = false, features = ["gpu-renderer"] }
apak = { path = "../../../crates/SpherePackageInstaller" }

[target.'cfg(target_os = "windows")'.dependencies]
gpui_windows.workspace = true
windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
gpui = { workspace = true, features = ["wayland", "x11"] }
gpui_linux = { workspace = true, features = ["wayland", "x11"] }

[build-dependencies]
embed-resource.workspace = true

[lints]
workspace = true

[lib]
name = "apakinstaller_app"
path = "src/lib.rs"

[[bin]]
name = "apakinstaller"
path = "src/main.rs"

[[bin]]
name = "apak"
path = "src/bin/apak.rs"

[[bin]]
name = "makeapak"
path = "src/bin/makeapak.rs"
