[package]
name = "futureboard_native"
version = "2026.7.2"
edition = "2021"
build = "build.rs"
license.workspace = true

[[bin]]
name = "FutureboardNative"
path = "src/main.rs"

[dependencies]
# GPUI core.
#
# The root workspace should define gpui with:
#   default-features = false
#   features = ["font-kit"]
#
# Do NOT enable wayland/x11 here globally, otherwise Windows builds may pull
# Linux-only dependencies into the graph.
gpui.workspace = true


sphere_ui_components = { workspace = true, features = ["gpu-renderer", "native-dialogs"] }

# Native audio engine.
#
# The workspace dependency should keep:
#   default-features = false
#
# This prevents the standalone native binary from linking against Node/N-API
# symbols. Electron can enable N-API from its own crate/build path instead.
sphere_directaudioengine.workspace = true
sphere-discord-rpc.workspace = true
# Exclusive Edition license client + offline token verification. All optional so
# the Community manifest stays valid with the private source tree absent.
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
# CSPRNG for the OAuth PKCE verifier / state nonce (Exclusive Edition auth).
rand = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows GPUI backend.
gpui_windows.workspace = true
# Exclusive Edition's private source registers this host at startup. Keeping
# the dependency here lets the public Community manifest remain valid when the
# ignored `crates/ExclusiveEdition` directory is absent.
cpal = { workspace = true, optional = true, features = ["asio"] }
# Machine fingerprint source (HKLM MachineGuid) for license binding.
windows-registry = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS GPUI backend.
gpui_macos.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# Linux GPUI backend.
#
# wayland/x11 are Linux-only, so enable them only here.
gpui = { workspace = true, features = ["wayland", "x11"] }
# The root workspace dep sets `default-features = false` (needed so the macOS /
# Windows backends don't pull `gpui/default`). For the Linux backend that would
# strip its `default = ["wayland", "x11"]`, leaving the Wayland/X11 match arms in
# `gpui_linux::current_platform` compiled out — so on a Wayland/X11 session it
# falls through to `unreachable!()`. Re-add the features explicitly here.
gpui_linux = { workspace = true, features = ["wayland", "x11"] }

[features]
default = ["gpu-renderer"]
gpu-renderer = ["sphere_ui_components/gpu-renderer"]
# Compile the private Exclusive Edition module and its Windows ASIO toolchain.
# This feature is not an entitlement: providers stay uninstalled until a signed
# license token verifies for the running machine.
exclusive = [
    "dep:cpal",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:ed25519-dalek",
    "dep:sha2",
    "dep:rand",
    "dep:windows-registry",
    # The engine's full-duplex ASIO session rides the same toolchain switch.
    "sphere_directaudioengine/asio",
]

[build-dependencies]
embed-resource.workspace = true
