[package]
name = "futureboard_native"
version = "2026.7.2"
edition = "2021"
build = "build.rs"
license.workspace = true

[[bin]]
name = "FutureboardNative"
path = "src/main.rs"

[dependencies]
# GPUI core.
#
# The root workspace should define gpui with:
#   default-features = false
#   features = ["font-kit"]
#
# Do NOT enable wayland/x11 here globally, otherwise Windows builds may pull
# Linux-only dependencies into the graph.
gpui.workspace = true


sphere_ui_components = { workspace = true, features = ["gpu-renderer", "native-dialogs"] }

# Native audio engine.
#
# The workspace dependency should keep:
#   default-features = false
#
# This prevents the standalone native binary from linking against Node/N-API
# symbols. Electron can enable N-API from its own crate/build path instead.
sphere_directaudioengine.workspace = true
sphere-discord-rpc.workspace = true
sphere-platform.workspace = true
# CEF host for built-in plugin editors. Optional: linking it requires the CEF
# SDK in `build/cef` (populate with SphereWebView's `install_cef` example).
sphere-webview = { workspace = true, optional = true, features = ["cef-runtime"] }
# Exclusive Edition license client + offline token verification. All optional so
# the Community manifest stays valid with the private source tree absent.
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
# CSPRNG for the OAuth PKCE verifier / state nonce (Exclusive Edition auth).
rand = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows GPUI backend.
gpui_windows.workspace = true
# Real MDX-NET stem separation with the DirectML GPU execution provider is a
# default on Windows (auto-used when a GPU is detected, CPU fallback otherwise).
sphere_ui_components = { workspace = true, features = ["stem-directml"] }
# Exclusive Edition's private source registers this host at startup. Keeping
# the dependency here lets the public Community manifest remain valid when the
# ignored `crates/ExclusiveEdition` directory is absent.
cpal = { workspace = true, optional = true, features = ["asio"] }
# Machine fingerprint source (HKLM MachineGuid) for license binding.
windows-registry = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS GPUI backend.
gpui_macos.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# Linux GPUI backend.
#
# wayland/x11 are Linux-only, so enable them only here.
gpui = { workspace = true, features = ["wayland", "x11"] }
# The root workspace dep sets `default-features = false` (needed so the macOS /
# Windows backends don't pull `gpui/default`). For the Linux backend that would
# strip its `default = ["wayland", "x11"]`, leaving the Wayland/X11 match arms in
# `gpui_linux::current_platform` compiled out — so on a Wayland/X11 session it
# falls through to `unreachable!()`. Re-add the features explicitly here.
gpui_linux = { workspace = true, features = ["wayland", "x11"] }

[features]
default = ["gpu-renderer", "stem-onnx", "builtin-plugin-editor"]
gpu-renderer = ["sphere_ui_components/gpu-renderer"]
# Real MDX-NET stem separation via ONNX Runtime. CPU by default and
# cross-platform; the onnxruntime library is loaded at runtime from
# ORT_DYLIB_PATH, falling back to the spectral stub when absent.
stem-onnx = ["sphere_ui_components/stem-onnx"]
# GPU execution providers — opt-in and platform-specific (do not add to
# `default`): DirectML on Windows, CUDA on Linux/Windows, CoreML on macOS.
stem-cuda = ["sphere_ui_components/stem-cuda"]
stem-directml = ["sphere_ui_components/stem-directml"]
stem-coreml = ["sphere_ui_components/stem-coreml"]
# Built-in plugin editors hosted in CEF (`mikoplugin://` embedded React UIs).
#
# On by default: built-in editors are a core Studio surface, and without this
# the editor window can only report that it is unavailable.
#
# The cost is a hard build requirement on the CEF SDK in `build/cef` (populate
# it with SphereWebView's `install_cef` example). To build without the SDK, use
# `--no-default-features --features gpu-renderer,stem-onnx`.
builtin-plugin-editor = [
    "dep:sphere-webview",
    "sphere_ui_components/builtin-plugin-editor",
]
# Developer builds only: allow Studio to start when elevated. Never enable for
# Community or Exclusive production/distribution builds.
allow_elevated_for_testing = ["sphere-platform/allow_elevated_for_testing"]
# Compile the private Exclusive Edition module and its Windows ASIO toolchain.
# This feature is not an entitlement: providers stay uninstalled until a signed
# license token verifies for the running machine.
exclusive = [
    "dep:cpal",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:base64",
    "dep:ed25519-dalek",
    "dep:sha2",
    "dep:rand",
    "dep:windows-registry",
    # The engine's full-duplex ASIO session rides the same toolchain switch.
    "sphere_directaudioengine/asio",
]

[build-dependencies]
embed-resource.workspace = true
# Build-time ONNX Runtime download (feature = "stem-onnx"): fetch + extract the
# platform library next to the built binary.
ureq.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
