[package]
name = "c1073"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "C1073 — 3-band channel EQ + preamp drive DSP core"

[lib]
name = "c1073"
# `rlib` for the umbrella crate / tests; `cdylib` so it also compiles as a
# Built-in Plugin dynamic library (C entry points are a later slice).
crate-type = ["rlib", "cdylib"]

[dependencies]
biquad.workspace = true
builtin-dsp-core.workspace = true

[lints]
workspace = true
