[package]
name = "compresser"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Compresser — soft-knee VCA compressor DSP core"

[lib]
name = "compresser"
# `rlib` for the umbrella crate / tests; `cdylib` so it also compiles as a
# Built-in Plugin dynamic library (C entry points are a later slice).
crate-type = ["rlib", "cdylib"]

[dependencies]
builtin-dsp-core.workspace = true

[lints]
workspace = true
