[package]
name = "echospace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "EchoSpace — stereo / ping-pong delay DSP core"

[lib]
name = "echospace"
# `rlib` for the umbrella crate / tests; `cdylib` so it also compiles as a
# Built-in Plugin dynamic library (C entry points are a later slice).
crate-type = ["rlib", "cdylib"]

[dependencies]
biquad.workspace = true
builtin-dsp-core.workspace = true

[lints]
workspace = true
