[package]
name = "equz8"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Equz8 — 8-band parametric EQ DSP core (biquad)"

[lib]
name = "equz8"
# `rlib` for the umbrella crate / tests; `cdylib` so it also compiles as a
# Built-in Plugin dynamic library (C entry points are a later slice).
crate-type = ["rlib", "cdylib"]

[dependencies]
biquad.workspace = true
builtin-dsp-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
